# ck

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PARALLEL_DEV_PLAN.md  PHASE1_TASKS.md  PHASE2_TRACK1.md  PHASE2_TRACK2.md  PHASE2_TRACK3.md  PHASE2_TRACK4.md  PHASE3_TRACK1.md  PHASE3_TRACK2.md  PHASE3_TRACK3.md  PHASE4_TASKS.md  README.md  WORKFLOW.md  alembic.ini  claudecode_full_dev_spec.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: dependencies.py  doc.py  errors.py  metrics.py  qa.py  repo.py
app/core/: config.py  logging.py  metrics.py  summary_rules.py  thresholds.py
app/models/: anchor.py  doc_models.py  graph_objects.py  qa_models.py  vector_models.py
app/services/agents/: doc_agent.py  metrics.py  qa_agent.py  strategy.py
app/services/cleanarch/: __init__.py  cdt_adapter.py  graph_builder.py  parser_adapter.py  parser_factory.py  scanner.py  spoon_adapter.py  treesitter_adapter.py
app/services/context/: __init__.py  context_builder.py  doc_context_builder.py
app/services/diagrams/: __init__.py  plantuml_generator.py
app/services/indexing/: __init__.py  embedding_builder.py  summary_builder.py  task_manager.py
app/services/locks/: distributed_lock.py
app/services/memory/: __init__.py  memory_manager.py
app/services/rate_limit/: redis_rate_limiter.py
app/services/retrieval/: anchor_resolver.py  doc_retriever.py  graph_expander.py  ranker.py  retriever.py
app/services/review/: __init__.py  doc_reviewer.py
app/services/workflows/: checkpoint.py  doc_graph.py  qa_graph.py  repo_index_graph.py
app/storage/: __init__.py  redis_client.py  repositories.py  schema.sql  schema_vector.sql  vector_store.py
app/storage/migrations/: README  env.py  script.py.mako
app/storage/migrations/versions/: 202604170001_initial_schema.py  202604200001_document_storage.py
app/tests/: test_anchor.py  test_anchor_resolver.py  test_api_auth.py  test_caching.py  test_context_builder.py  test_degradation.py  test_doc_agent_integration.py  test_doc_agent_phase3.py  test_doc_context_builder.py  test_doc_generation.py  test_doc_reviewer.py  test_embedding_builder.py  test_graph_expander.py  test_health.py  test_index_task_manager.py  test_integration.py  test_langgraph_workflows.py  test_memory_manager.py  test_metrics.py  test_metrics_collector.py  test_parser.py  test_plantuml_generator.py  test_postgres_integration.py  test_qa.py  test_ranker.py  test_redis_infra.py  test_retrieval.py  test_scanner.py  test_strategy_router.py  test_summary_builder.py  test_summary_pipeline.py  test_vector_store.py
data/: graphcode.sample.json
data/test_repo/: README.md
data/test_repo/app_core/: services.py  utils.py
data/test_repo/domain/: models.py
data/test_repo/web/: api.py  handlers.py
scripts/: build_index.py  demo.py  docker_entrypoint.sh  run_demo.py
