[project]
name = "ck"
version = "0.1.0"
description = "Single-repository design document generation and code QA system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.4.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.2",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "langgraph>=0.2.70",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.2.0",
    "redis[hiredis]>=5.0.0",
    "openai>=1.51.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0.20240712",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501", "E402", "UP012", "UP017", "SIM103", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"app/tests/**/*.py" = ["B017", "SIM117"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
files = ["app/api", "app/core", "app/models", "app/services/indexing/task_manager.py"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "app.services.agents.*",
    "app.services.cleanarch.*",
    "app.services.context.*",
    "app.services.diagrams.*",
    "app.services.indexing.embedding_builder",
    "app.services.indexing.summary_builder",
    "app.services.memory.*",
    "app.services.retrieval.*",
    "app.services.review.*",
    "app.storage.*",
]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["app.tests.*", "scripts.*"]
ignore_errors = true
